# LLAMA

./: CONTRIBUTORS  LICENSE  README
benchmarks/: NOTE
benchmarks/SimpleMOC-kernel/src/cpu/: DUAL_NVM_DRAM.py  Makefile  SimpleMOC-kernel_header.h  main.c
benchmarks/XSBench/src/: DUAL_NVM_DRAM.py  Main.c  Makefile  XSbench_header.h
benchmarks/matrix/matrix_dynamic_memory/: DUAL_NVM_DRAM.py  build.sh  matrix.c
benchmarks/matrix/matrix_dynamic_memory/llvm/: build.sh  indvar  llama.cpp
benchmarks/simple_mem/: DUAL_NVM_DRAM.py  build.sh  simple_calloc.c
llvm/: CMakeLists.txt  build.sh  llama.cpp  llvm_bug_fix.c
project/llvm/: .ske  rot
project/llvm/llvm/Config/: llvm-config.h
